moving to Java 1.8